--- a/src/erbi_nlp/setup.cfg
+++ b/src/erbi_nlp/setup.cfg
@@ -1,4 +1,5 @@
 [develop]
-script-dir=$base/lib/erbi_nlp
+script_dir=$base/lib/erbi_nlp
 [install]
-install-scripts=$base/lib/erbi_nlp
+install_scripts=$base/lib/erbi_nlp
+#
