first version of chatbot (no ros)

--- a/src/erbi_nlp/Dockerfile
+++ b/src/erbi_nlp/Dockerfile
@@ -10,3 +10,6 @@ WORKDIR /root/dev
 RUN colcon build
 RUN echo ". install/setup.bash" >> /opt/ros/humble/setup.bash
 
+RUN apt-get update && apt-get install -y --no-install-recommends
+RUN apt-get install python3-pip -y
+
