--- a/src/erbi_nlp/Dockerfile
+++ b/src/erbi_nlp/Dockerfile
@@ -1,14 +1,15 @@
-FROM osrf/ros:humble-desktop
+FROM test
 
 RUN mkdir -p ~/dev/src/erbi_nlp
 
 COPY . /root/dev/src
+
+COPY ./utility/chatbot /root/dev/install/erbi_nlp/lib/python3.10/site-packages/erbi_nlp/chatbot
 
 WORKDIR /root/dev
 
 RUN colcon build
 RUN echo ". install/setup.bash" >> /opt/ros/humble/setup.bash
 
-RUN apt-get update && apt-get install -y --no-install-recommends
-RUN apt-get install python3-pip -y
+
 
